# PUJ_ML

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/cxx/: CMakeLists.txt  EncodeNewFeedForwardNeuralNetwork.cxx  FeedForwardNeuralNetwork.cxx  FeedForwardNeuralNetworkFit.cxx  FitMNISTModel.cxx  LinearRegressionClosedFit.cxx  LogisticRegressionFit.cxx
examples/python3/: LinearRegressionClosedFit.py  LogisticRegressionFit.py
examples/regressions/python/: linear_00.py
lib/cxx/: CMakeLists.txt
lib/cxx/PUJ_ML/: CMakeLists.txt  Config.h  Helpers.h
lib/cxx/PUJ_ML/Helpers/: Confussion.h  FitModel.h  ParseFitArguments.cxx  ParseFitArguments.h
lib/cxx/PUJ_ML/IO/: Base64.cxx  Base64.h  ReadCSV.h  ReadIDX.h
lib/cxx/PUJ_ML/Model/: Base.cxx  Base.h  Base.hxx
lib/cxx/PUJ_ML/Model/NeuralNetwork/: Activations.cxx  Activations.h  FeedForward.cxx  FeedForward.h  FeedForward.hxx
lib/cxx/PUJ_ML/Model/Regression/: Linear.cxx  Linear.h  Linear.hxx  Logistic.cxx  Logistic.h  Logistic.hxx
lib/cxx/PUJ_ML/Optimizer/: Adam.h  Adam.hxx  Base.h  Base.hxx  GradientDescent.h  GradientDescent.hxx
lib/python/PUJ_ML/Regression/: Linear.py
lib/python3/PUJ_ML/Model/NeuralNetwork/: ActivationFunctions.py  FeedForward.py
lib/python3/PUJ_ML/Optimizer/: Adam.py
models/: feedforward_neuralnetwork_00.txt  feedforward_neuralnetwork_01.txt  feedforward_neuralnetwork_02.txt  mnist_00.txt
